--- a/reviewandroid/src/main/res/layout/activity_study_rx_java.xml
+++ b/reviewandroid/src/main/res/layout/activity_study_rx_java.xml
@@ -1,45 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical">
 
     <Button
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:text="1.RxJava的第一个HelloWorld"
         android:onClick="clickHelloWorld"
-        />
+        android:text="1.RxJava的第一个HelloWorld"
+        android:textAllCaps="false" />
 
 
     <Button
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:text="2.使用Just(T…)方法创建事件队列"
         android:onClick="clickJust"
-        />
+        android:text="2.使用Just(T…)方法创建事件队列"
+        android:textAllCaps="false" />
 
     <Button
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:text="3.Consumer作为观察者只关心onNext事件"
         android:onClick="clickConsumer"
-        />
+        android:text="3.Consumer作为观察者只关心onNext事件"
+        android:textAllCaps="false" />
 
     <Button
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:text="4.RxJava线程使用"
         android:onClick="clickThread"
-        />
+        android:text="4.RxJava线程使用"
+        android:textAllCaps="false" />
+
+
+    <Button
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="clickMap"
+        android:text="5.变换操作符Map"
+        android:textAllCaps="false" />
+
+    <Button
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="clickFlatMap"
+        android:text="6.变换操作符FlatMap"
+        android:textAllCaps="false" />
 
 
 
