--- a/reviewandroid/src/main/res/layout/activity_view_pager_loop3.xml
+++ b/reviewandroid/src/main/res/layout/activity_view_pager_loop3.xml
@@ -7,7 +7,10 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager_3"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="200dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
     </android.support.v4.view.ViewPager>
 
@@ -15,8 +18,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="160dp"
         android:gravity="center"
 
         >
@@ -41,12 +43,6 @@
             />
 
     </RelativeLayout>
-
-
-
-
-
-
 
 
 </RelativeLayout>
