--- a/reviewandroid/src/main/res/layout/activity_scroll.xml
+++ b/reviewandroid/src/main/res/layout/activity_scroll.xml
@@ -6,12 +6,21 @@
     android:orientation="vertical"
     tools:context="com.merpyzf.reviewandroid.activity.ScrollActivity">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="clickMove"
+        android:text="移动"
+        />
     <TextView
         android:id="@+id/tv_test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
         android:text="测试测试"
         />
+
+
 
 
 </LinearLayout>
