--- a/reviewandroid/src/main/res/values/styles.xml
+++ b/reviewandroid/src/main/res/values/styles.xml
@@ -16,5 +16,11 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    
+    <declare-styleable name="MyView">
+
+        <attr name="maxScale" format="integer" />
+
+    </declare-styleable>
 
 </resources>
