--- a/reviewandroid/src/main/res/layout/activity_show_draw_circle.xml
+++ b/reviewandroid/src/main/res/layout/activity_show_draw_circle.xml
@@ -9,7 +9,7 @@
 
     <com.merpyzf.reviewandroid.customui.CircleView
         android:background="@color/colorPrimary"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:padding="40dp"
         app:circle_color="@color/colorAccent"
         android:layout_height="wrap_content" />
