--- a/reviewandroid/src/main/res/layout/activity_main.xml
+++ b/reviewandroid/src/main/res/layout/activity_main.xml
@@ -676,6 +676,18 @@
 
             />
 
+
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textAllCaps="false"
+            android:onClick="clickOrmLite"
+            android:text="OrmLite的使用"
+
+            />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
